[gd_scene load_steps=3 format=3 uid="uid://4nnjvgrn7b40"]

[ext_resource type="Script" path="res://assets/debug/game/scripts/debug_section_game.gd" id="1_stp2c"]

[sub_resource type="ImageTexture" id="ImageTexture_sk7mj"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stp2c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelOptions" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="GridProperty" type="OptionButton" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="YPos" type="VSlider" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 39.0
tick_count = 9
ticks_on_borders = true

[node name="GridTexture" type="TextureRect" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("ImageTexture_sk7mj")

[node name="SliderContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24

[node name="XPos" type="HSlider" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer/SliderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
max_value = 39.0
tick_count = 9

[node name="RadiusLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 30)
layout_mode = 2
size_flags_horizontal = 0
text = "Radius
"
scroll_active = false

[node name="Radius" type="HSlider" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="ChangeLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 30)
layout_mode = 2
size_flags_horizontal = 0
text = "Change
"
scroll_active = false

[node name="Change" type="HSlider" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
min_value = -1.0
max_value = 1.0
step = 0.1
tick_count = 3

[node name="UpdateButton" type="Button" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Update"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="NextDayButton" type="Button" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Next Day"
